# taginfo-tools

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md
.github/actions/build-and-test/: action.yml
.github/actions/cmake/: action.yml
.github/actions/ctest/: action.yml
.github/actions/ubuntu-prerequisites/: action.yml
.github/workflows/: ci.yml
include/: sqlite.hpp
src/: CMakeLists.txt  geodistribution.hpp  hash.hpp  osmstats.cpp  similarity.cpp  sizes.cpp  statistics-handler.hpp  statistics_handler.hpp  string-store.hpp  string_store.hpp  taginfo-chronology.cpp  taginfo-similarity.cpp  taginfo-sizes.cpp  taginfo-stats.cpp  taginfo-unicode.cpp  taginfo_unicode.cpp  tagstats-handler.cpp  tagstats-handler.hpp  tagstats.cpp  tagstats_handler.cpp  tagstats_handler.hpp  util.cpp  util.hpp  version.cpp.in  version.hpp
test/: CMakeLists.txt  data.opl  init.sh  test-hash.cpp  test-util.cpp  unicode.opl
test/t/: osmstats.sh  similarity.sh  sizes.sh  stats.keys.dump  stats.sh  stats.stats.dump  stats.tags.dump  unicode.sh
